# HSAIL-Instruction-Set-Simulator

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  Doxyfile.in  LICENSE.TXT  README  README.md  example.l  parser.cc  parser.h  tokens.h
demo/: aqlDemo.cc  atomicexch.cc  barrierTest.cc  debug.cc  dumpDebugInfo.cc  fcos.cc  fib.cc  fibDebug.cc  vectorCopy.cc
gmock/: gmock.h
gtest/: gtest.h  gtest_main.cc
include/: AMDGPUDebug.h  brig.h  brig_buffer.h  brig_control_block.h  brig_engine.h  brig_function.h  brig_inst_helper.h  brig_llvm.h  brig_module.h  brig_reader.h  brig_runtime.h  brig_runtime_internal.h  brig_scope.h  brig_symbol.h  brig_util.h  brig_writer.h  bugs.h  context.h  error_reporter.h  error_reporter_interface.h  fake_error_reporter.h  hsa.h  hsa_perf.h  hsacommon.h  hsacore.h  hsacorecommon.h  hsail2brig.h  hsailasm_wrapper.h  lexer_interface.h  lexer_wrapper.h  mock_error_reporter.h  mock_lexer.h  newcore.h  parser.h  parser_wrapper.h  tokens.h
src/: CMakeLists.txt  brig_buffer.cc  context.cc  error_reporter.cc  example.l  hsail2brig.cc  lexer_rules.l  lexer_wrapper.cc  parser.cc  parser_wrapper.cc
src/brig2llvm/: CMakeLists.txt  brig2llvm.cc  brig_control_block.cc  brig_engine.cc  brig_function.cc  brig_inst_helper.cc  brig_module.cc  brig_reader.cc  brig_runtime.cc  brig_scope.cc  brig_symbol.cc  brig_writer.cc  hsailasm_wrapper.cc  math_private.h  s_fma.c
src/brig2llvm/scripts/cmake/: EnsureAtomicOps.cmake  EnsureELFisPresent.cmake  EnsureLLVMisPresent.cmake  EnsureLibDwarfisPresent.cmake  EnsureLibHSAILisPresent.cmake  FindTargetArch.cmake
src/hsa_runtime/: CMakeLists.txt  hsa_debug.cc  hsa_perf.cc  hsa_runtime.cc
src/newcore/: CMakeLists.txt  newcore.cc
test/: AllUp.hsail  Atom_test.h  AtomicImage_test.h  Block_test.h  Branch_test.h  CMakeLists.txt  Call_test.h  Cmp_test.h  Cvt_test.h  Extension_test.h  FileDecl_test.h  GlobalDecl_test.h  ImageInstruction_test.h  ImageRet_test.h  Image_test.h  Instruction0_test.h  Instruction1_test.h  Instruction2_test.h  Instruction3_test.h  Instruction4_test.h  Instruction5_test.h  LdSt_test.h  Ld_test.h  Location_test.h  Mov_test.h  Mul_test.h  Pragma_test.h  Query_test.h  St_test.h  Syscall_test.h  VectorAdd.hsail  VectorCopy.hsail  Version_test.h  aqlDemo.hsail  atomicexch.hsail  barrierTest.hsail  brig2llvm_test.cc  brig_reader_test.cc  brig_runtime_test.cc  brig_runtime_test_internal.h  (+24 more)
test/hsail2brig/: Atom_test.cc  AtomicImage_test.cc  Block_test.cc  Block_test.h  Branch_test.cc  Call_test.cc  Cmp_test.cc  Comment_test.cc  Control_test.cc  Cvt_test.cc  Example1_test.cc  Example2_test.cc  Example3_test.cc  Example4_test.cc  Example5_test.cc  Example6_test.cc  Extension_test.cc  FileDecl_test.cc  GlobalDecl_test.cc  ImageInstruction_test.cc  Instruction0_test.cc  Instruction1_test.cc  Instruction2_test.cc  Instruction3_test.cc  Instruction4_test.cc  Instruction5_test.cc  Kernel_test.cc  Label_test.cc  Ld_test.cc  Location_test.cc  Mov_test.cc  Mul_test.cc  Operand_test.cc  Pragma_test.cc  Query_test.cc  St_test.cc  Syscall_test.cc  Version_test.cc
testcase/: atom_test.cc  atom_test.h  bar_test.cc  bar_test.h  branch_test.cc  branch_test.h  cmp_test.cc  cmp_test.h  cvt_test.cc  cvt_test.h  declare_test.cc  declare_test.h  directive_test.cc  directive_test.h  globaldecl_test.cc  globaldecl_test.h  image_test.cc  image_test.h  instruction0_test.cc  instruction1_test.cc  instruction1_test.h  instruction2_test.cc  instruction2_test.h  instruction3_test.cc  instruction3_test.h  instruction4_test.cc  instruction4_test.h  instruction5_test.cc  instruction5_test.h  label_test.cc  label_test.h  ld_test.cc  ld_test.h  location_test.cc  location_test.h  mov_test.cc  mov_test.h  mul_test.cc  mul_test.h  operand_test.cc  (+18 more)
